# Support-System

./: .autoflake.yaml  .gitignore  Makefile  README.md  docker-compose.yml  main.py  my_vector_db.pkl  mypy.ini
backend/: Dockerfile  main.py  pyproject.toml  smart_support_vtb_belarus_faq_final.xlsx
backend/classification/: classify.py  llm_solver.py
backend/data/: loader.py  preprocess_data.py
backend/utils/: README.md  config.py
backend/vector_db/: db_create.py  vector_builder.py  vector_db.py
backend/vectorization/: vectorizer.py
lab1/: README.md  binary_operations.py  binary_operations_test.py  convertations.py
lab2/: README.md  main.py  test.py
lab3/: README.md  karno.py  main.py  test.py
lab4/: main.py  Д8421+6.circ  восьмиразрядный.circ  сумматор одноразрядный.circ
lab5/: README.md  automat4.circ  main.py
lab6/: README.md  main.py  test.py
lab7/: README.md  main.py  test.py
smart-support/: Dockerfile  package.json  pnpm-lock.yaml
smart-support/src/: middleware.tsx
smart-support/src/actions/Message/: insertMessage.tsx  loadUserChats.tsx
smart-support/src/actions/User/: autentificationUser.tsx  insertUser.tsx  selectUsers.tsx  selectUsersEmail.tsx
smart-support/src/app/: global.css  layout.tsx  page.module.css  page.tsx
smart-support/src/app/admin/: page.tsx
smart-support/src/companenents/Auntification/: Auntification.module.css  Auntification.tsx
smart-support/src/companenents/Chat/: Chat.module.css  (+1 more)
smart-support/src/modules/: database.ts
smart-support/src/sorse/: jwt.tsx  userId.ts
smart-support/src/types/: chat.ts
(+26 files in other folders)
